Delete duplicate entries for the DRBA PD, and change the county to NA.

--- a/vignettes/data_cleaning_workbook.Rmd
+++ b/vignettes/data_cleaning_workbook.Rmd
@@ -200,3 +200,30 @@ stopifnot(
     officer %>% filter(is.na(officer_gender)) %>% nrow()
 )
 ```
+
+# Final cleanup and consistency checks
+## Duplicate entries for DRBA PD
+The "Delaware River and Bay Authority Police Department" is listed twice,
+associated with two different counties, with with two entries for each officer.
+```{r}
+drbapd <- "Delaware River and Bay Authority Police Department"
+agency %>% filter(agency_name==drbapd)
+officer %>% filter(agency_name==drbapd) %>% 
+  group_by(agency_county) %>%
+  count()
+```
+We will keep just the Salem County records, and change the `agency_county` to `NA`.
+```{r}
+# In agency, filter out the non-Salem County DRBA agencies.
+agency <- agency %>% filter(agency_name != drbapd |
+                    (agency_name == drbapd &
+                       agency_county == "Salem County"))
+# Now replace Salem County with NA
+agency$agency_county[agency$agency_name == drbapd] <- NA
+
+# Now do the same for the officer table
+officer <- officer %>% filter(agency_name != drbapd |
+                              (agency_name == drbapd &
+                                 agency_county == "Salem County"))
+officer$agency_county[officer$agency_name == drbapd] <- NA
+```
