Github R CMD check action.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 # njoagleod
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/tor-gu/njoaguof/workflows/R-CMD-check/badge.svg)](https://github.com/tor-gu/njoagleod/actions)<!-- badges: end -->
+[![R-CMD-check](https://github.com/tor-gu/njoagleod/workflows/R-CMD-check/badge.svg)](https://github.com/tor-gu/njoagleod/actions)
+<!-- badges: end -->
 
 This is a cleaned-up version of the NJ OAG Law Enforcment Officer Diversity 
   database available from https://www.njoag.gov/policerecruiting/
