--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/tor-gu/njoagleod/workflows/R-CMD-check/badge.svg)](https://github.com/tor-gu/njoagleod/actions)
 <!-- badges: end -->
 
-This is a cleaned-up version of the NJ OAG Law Enforcment Officer Diversity 
+This is a cleaned-up version of the NJ OAG Law Enforcement Officer Diversity 
   database available from https://www.njoag.gov/policerecruiting/
 
 ## Dataset Overview
