Add Boonton Twp PD to the list of known, missing agencies.

--- a/vignettes/data_cleaning_workbook.Rmd
+++ b/vignettes/data_cleaning_workbook.Rmd
@@ -420,6 +420,7 @@ stopifnot(
       "Linden Police Department",
       "Freehold Boro PD",
       "Washington Twp PD",
+      "Boonton Twp PD",
       "College Of New Jersey",
       "State Parole Board"
     ) %>%
